--- a/client/views/signup.html
+++ b/client/views/signup.html
@@ -5,8 +5,8 @@
     <form id='signup-form' layout="column" layout-align="center center"
           ng-submit="register(registerData)">
 
-      <input id="register-name-field" ng-model="registerData.name" placeholder="your name"><br/>
-      <input id="register-email-field" ng-model="registerData.email" placeholder="email" type="email" required><br/>
+      <input id="register-name-field" ng-model="registerData.name" placeholder="create username"><br/>
+      <input id="register-email-field" ng-model="registerData.email" placeholder="your email" type="email" required><br/>
       <input id="register-password-field" ng-model="registerData.password" placeholder="set a password" type="password"
              required><br/>
 
