--- a/client/views/account.html
+++ b/client/views/account.html
@@ -4,15 +4,19 @@
 
 <div>
 
-<form ng-submit="changePassword(newPassword, newPassword2)" layout="column" layout-align="center center">
+<form ng-submit="ChangePassword.$valid && changePassword(newPassword, newPassword2)" layout="column" layout-align="center center" name="ChangePassword">
 
   <label for="password1">New Password</label>
-  <input id="password1" type="password" ng-model="newPassword" required>
+  <input id="password1" type="password" ng-model="newPassword" name="password" ng-minlength="6" required >
 
   <label for="password2">Verify new password</label>
-  <input id="password2" type="password" ng-model="newPassword2" required>
+  <input id="password2" type="password" ng-model="newPassword2"  required>
 
   <input type="submit" value="Submit"> </input>
+
+      <div ng-messages="ChangePassword.password.$error" ng-if="ChangePassword.password.$touched" role="alert">
+        <div ng-message="minlength">Password must be at least 6 characters</div>
+      </div>
 
 </form>
 
