--- a/client/views/account.html
+++ b/client/views/account.html
@@ -12,7 +12,7 @@
   <label for="password2">Verify new password</label>
   <input id="password2" type="password" ng-model="newPassword2"  required>
 
-  <input type="submit" value="Submit"> </input>
+  <input type="submit" value="Submit">
 
       <div ng-messages="ChangePassword.password.$error" ng-if="ChangePassword.password.$touched" role="alert">
         <div ng-message="minlength">Password must be at least 6 characters</div>
