bug fix css tags
in space.html view

--- a/client/views/space.html
+++ b/client/views/space.html
@@ -43,10 +43,10 @@
   <div layout="row" class="expanded-meta-actions">
 
 
-    <md-icon class="icon-btn" id="#play-from-here" ng-click="playSpace(Spaces.current(), expandedItem().id)">
+    <md-icon class="icon-btn" id="play-from-here" ng-click="playSpace(Spaces.current(), expandedItem().id)">
       fast_forward
     </md-icon>
-    <md-icon class="icon-btn" id="#set-as-first"
+    <md-icon class="icon-btn" id="set-as-first"
              ng-if="canEdit()"
              ng-click="setFirstSongThenRecompute(expandedItem())">
       looks_one
@@ -55,7 +55,7 @@
         Set as First
       </md-tooltip>
     </md-icon>
-    <md-icon class="icon-btn " id="#remove-item"
+    <md-icon class="icon-btn " id="remove-item"
              ng-if="canEdit()"
              ng-click="removeSong(expandedItem())">
       delete_forever
