--- a/client/views/sidebar/sidebar-info.html
+++ b/client/views/sidebar/sidebar-info.html
@@ -1,9 +1,12 @@
 <div class="sidebar-container">
   ( this is an XYZ space, made by
-  <a ng-if="owner.website"
-     ng-href="{{Utility.fixUrl(owner.website)}}"
+  <a ng-if="Spaces.current().owner.website"
+     ng-href="{{Utility.fixUrl(Spaces.current().owner.website)}}"
      target=_blank>
-    {{space.owner.name}}
+    {{Spaces.current().owner.name}}
   </a>
-  {{!owner.website? space.owner.name : ''}}.)
+  <span ng-if="!Spaces.current().owner.website">
+    {{Spaces.current().owner.name}}
+  </span>
+   )
 </div>
