--- a/xyz-player-component/xyz-component-style-app-only.scss
+++ b/xyz-player-component/xyz-component-style-app-only.scss
@@ -58,7 +58,7 @@
   }
 
   .media-title {
-    a, a:visited, a:active, a:hover {
+    a, a:visited, a:active {
       color: white;
     }
     position:absolute;
