--- a/client/scss/_variables.scss
+++ b/client/scss/_variables.scss
@@ -1,14 +1,24 @@
 // Our variables
-$base-header-font-family:  "courier new", sans-serif;
-$base-font-family:  "courier new", sans-serif;
+$base-header-font-family:  "Noto Sans", sans-serif;
+/*
+font-family: 'Noto Sans', sans-serif;
+font-family: 'Bungee Hairline', cursive;
+*/
+$base-font-family:  "Noto Sans", sans-serif;
 $base-body-font-family:  "minion-pro", sans-serif, serif;
 
+$base-header-font-weight: 200;
+
+$link-font-weight: 400;
+
 $base-font-size:   1em;
-$base-line-height: 1;
+$base-line-height: 1.3;
 $text-color: #333;
 
-$link-hover-color: #F63357;
+$link-color: black;
+$link-hover-color: #23beb1;
 
+$sidebar-background-color: rgba(220,220,220, 1);
 $xyz-player-height: 300px;
 $sidebar-width: 300px;
 
