--- a/client/scss/base/_base.scss
+++ b/client/scss/base/_base.scss
@@ -118,9 +118,9 @@ li {
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
-      font-family: $base-font-family;
+      font-family: $base-header-font-family;
 
-    font-weight: 300;
+    font-weight: $base-header-font-weight;
   margin:0.4em 0;
 }
 
@@ -130,8 +130,9 @@ h1, h2, h3, h4, h5, h6 {
  * Links
  */
 a {
-    color: #333;
-  font-weight:600;
+    color: $link-color;
+    font-weight:$link-font-weight;
+    text-decoration: none;
 
     &.whitelink {
       color:white;
@@ -142,7 +143,7 @@ a {
 
 
     &:hover{
-      color:brown;
+      color:$link-hover-color;
     }
 }
 
