--- a/client/scss/_colors.scss
+++ b/client/scss/_colors.scss
@@ -50,12 +50,7 @@
   }
 
   &.first-song {
-    stroke: blue;
-  }
-
-  &.now-playing {
-    stroke: yellow;
-
+    stroke: white;
   }
 
   &.unavailable {
@@ -64,7 +59,7 @@
 }
 
 .user-settings-popup {
-  background-color: black;
+  background-color: rgba(0,0,0,0.1);
   button, input {
     color: black;
   }
@@ -82,15 +77,19 @@
 }
 
 .active-icon:hover {
-  color: black;
+  color: white;
 }
 
 .filters {
   font-size: 0.8em;
 }
 
+.media-inspector{
+
+  background-color: rgba(0, 0, 0, 0.225);
+
+}
 .media-inspector-actions {
-  background-color: #EEE;
 
   button {
     background: none;
@@ -99,8 +98,7 @@
 
 .media-inspector-details {
 
-  border-left: 1px dotted black;
-  background-color: white;
+
   .error {
     color: red;
   }
@@ -108,12 +106,16 @@
 
 .expanded-meta-actions {
   .icon-btn {
-    background-color: white;
+    margin-left: 0.2em;
+    margin-right: 0.2em;
   }
 }
 
+.material-icons {
+  color: white;
+}
 
-.sidebar-container{
+.sidebar-container {
 
   background: $sidebar-background-color;
 }
