--- a/client/scss/_layout.scss
+++ b/client/scss/_layout.scss
@@ -5,13 +5,13 @@
     font-weight: bold;
     margin: 0;
   }
-  position: fixed;
+  position: absolute;
   top: 0;
-  padding-top: 2px;
+  padding-top: $top-padding;
   z-index: 2;
   width: 100vw;
   height: $bar-height;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0);
   color: white;
 
   .icon, .icon-btn {
@@ -21,8 +21,8 @@
   .user-settings-popup {
     position: absolute;
     padding: 1em;
-    top: $bar-height;
-    right: 0;
+    top: $top-padding + $bar-height;
+    right: $top-padding;
     width: 12em;
     height: 22em;
     a {
@@ -39,7 +39,17 @@
   position: absolute;
   font-size: 1rem;
   left: 0;
+  img {
+    height: 25px;
+    margin-left: $space-margin-left;
+
+    @include MQ(M) {
+      height: 37px;
+    }
+  }
+
 }
+
 
 #bar-title {
   cursor: default;
@@ -49,18 +59,13 @@
   text-align: center;
 }
 
-.bar-icons {
-  position: absolute;
-  right: 0;
-  top: 0;
-}
 
 .loading-indicator {
 
   width: 100vw;
   z-index: 10000;
   position: fixed;
-  top: $bar-height;
+  top: 0;
 }
 
 .ng-toast {
@@ -84,7 +89,7 @@
   overflow: scroll;
   height: 100vh;
   width: 100%;
-  margin-top: $bar-height;
+  margin-top: 0;
   margin-bottom: 300px;
 
 }
@@ -131,27 +136,26 @@
   }
 }
 
+button {
 
-button{
-
-  min-width:2em;
-  margin:0.3em 0;
+  min-width: 2em;
+  margin: 0.3em 0;
   height: 2em;
   padding: 2px;
 }
 
-input{
-  margin:0.3em 0;
-  min-height:2em;
+input {
+  margin: 0.3em 0;
+  min-height: 2em;
 }
 
-.link-button{
-  cursor:pointer;
+.link-button {
+  cursor: pointer;
 }
 
-.checkbox, .checkbox *{
-  display:inline;
-  max-width:2em;
+.checkbox, .checkbox * {
+  display: inline;
+  max-width: 2em;
 }
 
 button {
