--- a/client/scss/_variables.scss
+++ b/client/scss/_variables.scss
@@ -13,19 +13,23 @@ $link-font-weight: 400;
 
 $base-font-size:   1em;
 $base-line-height: 1.3;
-$text-color: #333;
+$text-color: white;
 
-$link-color: black;
-$link-hover-color: #23beb1;
+$link-color: white;
+$link-hover-color: #a8fff7;
 
-$sidebar-background-color: rgba(220,220,220, 1);
+$light-link: white;
+$light-link-hover: #a8fff7;
+
+$sidebar-background-color: rgba(0, 0, 0, 0.1);
 $xyz-player-height: 300px;
 $sidebar-width: 300px;
 
 $space-margin-left: 3em;
-$space-margin-top: 3em;
+$space-margin-top: 5em;
 
 $bar-height:1.5em;
+$top-padding:1.25em;
 
 $XS:    320px;
 $S:		500px;
@@ -36,8 +40,6 @@ $L:     1170px;
 $XL:	1450px;
 $XXL:	2000px;
 
-$light-link: white;
-$light-link-hover: lime;
 
 
 //==for bootstrap Alerts
