--- a/client/views/space.html
+++ b/client/views/space.html
@@ -8,12 +8,21 @@
      width
      viewbox="0 0 0 0"
 >
-
+  <radialGradient id="now-playing-radial-effect"
+                  fx="50%"
+                  fy="50%"
+                  cx="50%"
+                  cy="50%"
+                  r="90%"
+                  spreadMethod="pad">
+    <stop offset="15%" stop-color="white"></stop>
+    <stop offset="50%" stop-color="white" stop-opacity="0"></stop>
+  </radialGradient>
 
   <path class="playlist-line"
         ng-attr-d="{{linePath(Playlister.getList() || [])}}"
         d=""
-        fill="none" stroke="lightgrey" ng-if="Spaces.current().songs[0]"></path>
+        fill="none" stroke="white" ng-if="Spaces.current().songs[0]"></path>
 
   <g ng-repeat="item in Spaces.current().songs"
      media-item-dot
@@ -95,8 +104,8 @@
 </div>
 
 <div ng-if="isHovering()">
-  <div class="item-hover"  ng-style="getHovering().css" style="position:absolute; background-color:white;">
-  {{getHovering().item.title}}
+  <div class="item-hover" ng-style="getHovering().css" style="position:absolute;">
+    {{getHovering().item.title}}
   </div>
 </div>
 
