--- a/xyz-player-component/xyz-component-style-app-only.scss
+++ b/xyz-player-component/xyz-component-style-app-only.scss
@@ -1,4 +1,3 @@
-
 @import '../client/scss/variables';
 
 .xyz-player {
@@ -7,13 +6,14 @@
 
   height: $xyz-player-height;
   width: 100vw;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.3);
   text-align: center;
   position: fixed;
-  bottom:0;
+  bottom: 0;
 
-  &.full-screen{
-    height:100vh;
+  &.full-screen {
+    height: 100vh;
+    background-color: black;
   }
 
   h1 {
@@ -27,14 +27,14 @@
     height: calc(100% - 3em);
     position: absolute;
     top: 3em;
-    width:100%;
+    width: 100%;
     left: 0;
 
   }
 
   iframe {
     border: none;
-    height:100%;
+    height: 100%;
   }
 
   .media-controls {
@@ -42,39 +42,36 @@
     button {
       background-color: black;
       border: none;
-      max-height:1em;
-      max-width:1em;
+      max-height: 1em;
+      max-width: 1em;
       margin: 0;
-      padding:0
+      padding: 0
     }
   }
 
-  .full-screen-controls{
-    position:absolute;
-    top:0;
-    left:0;
-    height:100px;
-    width:100px;
+  .full-screen-controls {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100px;
+    width: 100px;
   }
 
   .media-title {
-    a, a:visited, a:active {
-      color: white;
-    }
-    position:absolute;
-    right:0;
+    position: absolute;
+    right: 0;
   }
 
 }
 
-.player-title{
-    max-width: 70%;
-    display: inline-block;
-    /* float: left; */
-    white-space: nowrap;
-    overflow: scroll;
-    margin-bottom:-100px !important;
-    padding-bottom:100px !important; /* to hide scrolbar */
+.player-title {
+  max-width: 70%;
+  display: inline-block;
+  /* float: left; */
+  white-space: nowrap;
+  overflow: scroll;
+  margin-bottom: -100px !important;
+  padding-bottom: 100px !important; /* to hide scrolbar */
 }
 
 #xyz-soundcloud-iframe, #xyz-youtube-iframe {
