--- a/client/views/bar.html
+++ b/client/views/bar.html
@@ -1,7 +1,7 @@
 <div class="top-bar">
 
   <h1 id="bar-logo" ui-sref="base.landing" class="logo">
-    <img src="/images/bb.png"></h1>
+    <img src="/images/logo.png"></h1>
 
   <h1 id="bar-title" ng-if="title()"> {{title()}}
     <a ng-if="Spaces.current()">
