--- a/client/scss/_typography.scss
+++ b/client/scss/_typography.scss
@@ -1,8 +1,8 @@
 
-
 #bar-title {
   font-size: 1rem;
 }
+
 .media-inspector-details {
 
   .provider {
@@ -28,13 +28,29 @@
   font-size: 0.70rem;
 }
 
-
-.item-count, .space-owner-label{
+.item-count, .space-owner-label {
   font-size: 0.65rem;
 }
 
+.item-length {
+  font-size: 0.7rem;
+}
 //http://google.github.io/material-design-icons/#sizing
-.material-icons.md-18 { font-size: 18px; }
-.material-icons.md-24 { font-size: 24px; }
-.material-icons.md-36 { font-size: 36px; }
-.material-icons.md-48 { font-size: 48px; }
+.material-icons.md-18 {
+  font-size: 18px;
+  line-height: 1.4;
+  width: 18px;
+  min-width: 18px;
+}
+
+.material-icons.md-24 {
+  font-size: 24px;
+}
+
+.material-icons.md-36 {
+  font-size: 36px;
+}
+
+.material-icons.md-48 {
+  font-size: 48px;
+}
