dot popup layout

--- a/client/scss/_colors.scss
+++ b/client/scss/_colors.scss
@@ -84,9 +84,9 @@
   font-size: 0.8em;
 }
 
-.media-inspector{
+.media-inspector, .expanded-meta-actions{
 
-  background-color: rgba(0, 0, 0, 0.225);
+  background-color: rgba(0, 0, 0, 0.21);
 
 }
 .media-inspector-actions {
