fix iframe height (no longer in quirks mode)

--- a/client/views/base.html
+++ b/client/views/base.html
@@ -15,7 +15,8 @@
   </div>
 
   <div class="xyz-player-container"
-       ng-controller="SiteWidePlayerCtrl" ng-if="Utility.isSideWidePlayerEnabled()">
+       ng-controller="SiteWidePlayerCtrl"
+       ng-if="Utility.isSideWidePlayerEnabled()">
     <div xyz-player
          data-space-name="getPlayingSpace().name"
          ng-show="getPlayingSpace()">
