--- a/client/views/account-change-password.html
+++ b/client/views/account-change-password.html
@@ -4,7 +4,12 @@
 
 <div>
 
-<form ng-submit="ChangePassword.$valid && changePassword(newPassword, newPassword2)" layout="column" layout-align="center center" name="ChangePassword">
+<form
+    ng-submit="ChangePassword.$valid && changePassword(newPassword, newPassword2)"
+    layout="column"
+    layout-align="center center"
+    name="ChangePassword"
+    class="change-password-form">
 
   <label for="password1">New Password</label>
   <input id="password1" type="password" ng-model="newPassword" name="password" ng-minlength="6" required >
