--- a/client/views/signup.html
+++ b/client/views/signup.html
@@ -43,7 +43,7 @@
 
     <form id='password-reset-form' layout="column" layout-align="center center"
           ng-submit="resetPassword(loginData.email)" ng-show="forgotPassword">
-      <p>Forgot your password? Please enter your email address below, then we'll send you link to reset your
+      <p>Please enter your email address here, then we'll send you a link to reset your
         password</p>
       <input ng-model="loginData.email"
              placeholder="email"
