Revert: improve password reset text, layout tweaks

--- a/client/views/landing.html
+++ b/client/views/landing.html
@@ -24,7 +24,7 @@
 </div>
 
 <div>
-  <div class="landing-section">
+  <div class="landing-section public-spaces-container">
   <h2>Public Spaces</h2>
 
     <ul layout-wrap layout-align="space-around left" layout="row">
