--- a/client/scss/_layout.scss
+++ b/client/scss/_layout.scss
@@ -112,9 +112,13 @@
       width: 100%;
     }
   }
-  margin-bottom: $xyz-player-height;
+  margin-bottom: 3em;
   margin-top: 3em;
 
+}
+
+.public-spaces-container {
+  margin-bottom: $xyz-player-height;
 }
 
 .xyz-player-container {
@@ -157,7 +161,3 @@ input {
 button {
 }
 
-.change-password-form {
-  padding-top: 4em;
-  padding-bottom:4em;
-}
