--- a/client/views/signup.html
+++ b/client/views/signup.html
@@ -1,5 +1,5 @@
 <div style="text-align: center;">
-  <div ng-if="!User.loggedIn()" class="landing-section" layout="column">
+  <section ng-if="!User.loggedIn()" layout="column">
 
     <h4>Sign up</h4>
     <form id='signup-form' layout="column" layout-align="center center"
@@ -54,6 +54,6 @@
 
     </form>
 
-  </div>
+  </section>
 
 </div>
