--- a/client/scss/_gradient-backgrounds.scss
+++ b/client/scss/_gradient-backgrounds.scss
@@ -1,15 +1,17 @@
+
 .grad-algae {
 
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a2f2df+0,4e9bed+57,c3ed76+100 */
-  background: #a2f2df; /* Old browsers */
-  background: -moz-linear-gradient(top, #a2f2df 0%, #4e9bed 57%, #c3ed76 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #a2f2df 0%, #4e9bed 57%, #c3ed76 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, #a2f2df 0%, #4e9bed 57%, #c3ed76 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#a2f2df', endColorstr='#c3ed76', GradientType=0); /* IE6-9 */
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#bef4d8+0,005356+89,003744+100 */
+background: #bef4d8; /* Old browsers */
+background: -moz-linear-gradient(top,  #bef4d8 0%, #005356 89%, #003744 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  #bef4d8 0%,#005356 89%,#003744 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  #bef4d8 0%,#005356 89%,#003744 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bef4d8', endColorstr='#003744',GradientType=0 ); /* IE6-9 */
 
 }
 
-.grad-beach {
+
+.grad-shoreline {
 
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f4d5c6+0,696baf+38,3733c4+64 */
   background: rgb(244, 213, 198); /* Old browsers */
@@ -61,5 +63,15 @@
   background: -webkit-linear-gradient(top, #4fefcf 0%, #1ac2d8 57%, #7ed381 100%); /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(to bottom, #4fefcf 0%, #1ac2d8 57%, #7ed381 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#4fefcf', endColorstr='#7ed381', GradientType=0); /* IE6-9 */
+
+}
+
+.grad-sherbet {
+/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f98eac+0,d8891a+48,d8891a+48,c2e222+100 */
+background: #f98eac; /* Old browsers */
+background: -moz-linear-gradient(top,  #f98eac 0%, #d8891a 48%, #d8891a 48%, #c2e222 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  #f98eac 0%,#d8891a 48%,#d8891a 48%,#c2e222 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  #f98eac 0%,#d8891a 48%,#d8891a 48%,#c2e222 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f98eac', endColorstr='#c2e222',GradientType=0 ); /* IE6-9 */
 
 }
