--- a/client/scss/_variables.scss
+++ b/client/scss/_variables.scss
@@ -16,10 +16,10 @@ $base-line-height: 1.3;
 $text-color: white;
 
 $link-color: white;
-$link-hover-color: #a8fff7;
+$link-hover-color: rgba(0, 0, 0, 0.4);
 
 $light-link: white;
-$light-link-hover: #a8fff7;
+$light-link-hover: rgba(0, 0, 0, 0.4);
 
 $sidebar-background-color: rgba(0, 0, 0, 0.1);
 $xyz-player-height: 300px;
