--- a/client/scss/_variables.scss
+++ b/client/scss/_variables.scss
@@ -28,8 +28,11 @@ $sidebar-width: 300px;
 $space-margin-left: 3em;
 $space-margin-top: 5em;
 
+
 $bar-height:1.5em;
 $top-padding:1.25em;
+$right-padding:1.25em;
+
 
 $XS:    320px;
 $S:		500px;
