set form to pristine after saving

--- a/client/views/partials/user-settings-popup.html
+++ b/client/views/partials/user-settings-popup.html
@@ -20,7 +20,10 @@
 </h2>
 
 
-<form id="user-edits-form" name="UserEditsForm" ng-show="userIsEditing()">
+<form id="user-edits-form"
+      name="UserEditsForm"
+      ng-show="userIsEditing()"
+      ng-submit="saveUserInfo(new).then(UserEditsForm.$setPristine)">
 
   <input ng-model="new.name"
          placeholder="update name"
